# main.go
@@ -1,17 +1,29 @@
 package main
 
 import (
-	"fmt"
-	"os"
-
+	"github.com/IngoS11/gorestapp/controllers"
 	_ "github.com/IngoS11/gorestapp/docs"
-	"github.com/IngoS11/gorestapp/model"
+	"github.com/IngoS11/gorestapp/initializers"
+	"github.com/IngoS11/gorestapp/middleware"
 	"github.com/gin-gonic/gin"
 
-	"github.com/IngoS11/gorestapp/api"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
+
+// Initialize the Server with environment variables
+func init() {
+
+	// load environment variables
+	initializers.LoadEnvVariables()
+
+	// connect to the database
+	initializers.ConnectToDb()
+
+	// syncronize database
+	initializers.SyncDatabase()
+
+}
 
 // Main function for the server
 //
@@ -23,34 +35,29 @@ import (
 //	@contact.email	ingo.sauerzapf@gmail.com
 //	@license.name	Apache 2.0
 //	@license.url	http://www.apache.org/licenses/LICENSE-2.0.html
-//	@host			localhost:8080
+//	@host			localhost:3000
 //	@BasePath		/api/v1
 func main() {
-
-	// Connect to the database
-	// capture connection properties
-	// DATABASE_URL environment variable must be set before you are able to use
-	// the program
-	// var databaseUrl = "postgres://postgres:abcd1234@localhost:5432/postgres"
-	var databaseUrl = os.Getenv("DATABASE_URL")
-	err := model.ConnectToDB(databaseUrl)
-	if err != nil {
-		fmt.Fprintln(os.Stderr, "Unable to connect to database::", err)
-		os.Exit(1)
-	}
 
 	router := gin.Default()
 
 	v1 := router.Group("/api/v1")
 	{
+		users := v1.Group("/users")
+		{
+			users.POST("", controllers.Signup)
+			users.POST("/login", controllers.Login)
+			users.GET("/validate", middleware.RequireAuth, controllers.Validate)
+		}
+
 		albums := v1.Group("/albums")
 		{
-			albums.GET("", api.GetAlbum)
-			albums.POST("", api.PostAlbum)
-			albums.GET(":id", api.GetAlbumById)
+			// albums.GET("", api.GetAlbum)
+			albums.POST("", controllers.AddAlbum)
+			// albums.GET(":id", api.GetAlbumById)
 		}
 
 	}
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-	router.Run(":8080")
+	router.Run()
 }
